# CHIP-8-Interpreter

./: .gitignore  CHIP-8.sln  CHIP-8.vcxproj  CHIP-8.vcxproj.filters  CMakeLists.txt  LICENSE.txt  chip8_sys.h
header/: CHIP-8.h
src/: CHIP-8.c  CHIP-8.cpp  CHIP-8.h  CMakeLists.txt  chip8_sys.h  instructions.c  instructions.h  main.c  main.cpp  stack.c  stack.h
